2004/12/06 Morgan Christiansson <drftpd@mog.se>
* Removed jsx3 and xstream3 usermanagers, removed AutoFreeSpace.
  There were reports of them being broken and i'm not maintaining them anymore.
* Made ${log4j.configuration} reload when using SITE RELOAD.
* Fixed spelling fault, thanks M3ta.
* moved Pre, made it reset lastModified() on usage,
  made it reset lastModified() and ownership on
  the dir pre'd and not just the subdirs.

2004/12/06 Teflon <teflon114@gmail.com>
* Added IRC !ident command to identify irc users as their ftp users
* Modified IRC !invite command to automatically identify irc users
* Set javabeans to be the default usermanager in drftpd.conf
* Fixed plugin paths to point to the correct class in irc.conf

2004/11/30 Morgan Christiansson <drftpd@mog.se>
* Added SITE DELUSER <user> <reason> at the request of M3ta.
* Added patch from M3ta. http://www.drftpd.org/phpBB2/viewtopic.php?p=117#117
* Fixes to SITE USER. Thanks to Altered for the reports.

2004/11/29 Morgan Christiansson <drftpd@mog.se>
* Converted slaves/ to get serialized using javabeans.
  Use this handy code snippet to extract addlines from the old format
  (does not convert idents):
   grep hostMask * | sed \
   -e 's/^\(.*\)\.xml:/site addslave \1 ; site slave \1 addmask /' \
   -e 's/<__hostMask>/*@/' -e 's/<\/__hostMask>//'
* Made slaves delete file on aborted file uploads.

2004/11/26 Morgan Christiansson <drftpd@mog.se>
* Renamed .getUsername() to .getName() and moved the declaration
  to the interface Entity.
* Added pathpermissions to Mirror plugin.
  perm.1=/section1/* -slave1,-slave2
  perm.2=/section2/* =group
* Added initial javabeans usermanager. This will replace the old usermanagers.
  Thanks to captain- for recommending javabeans.

2004/11/24 Morgan Christiansson <drftpd@mog.se>
* Added SITE DEBUG for displaying stacktraces in control connection.
* Changed keys in .properties formatting.
* Made FinishReleaseOnSlaves ignore whether slave is online or offline